--- a/TiltCodeManager/app/src/main/AndroidManifest.xml
+++ b/TiltCodeManager/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.tiltcode.tiltcodemanager">
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="com.android.vending.BILLING" />
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
