--- a/TiltCodeManager/app/src/main/AndroidManifest.xml
+++ b/TiltCodeManager/app/src/main/AndroidManifest.xml
@@ -1,8 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tiltcode.tiltcodemanager">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission android:name="com.icelancer.androidgcmclient.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.icelancer.androidgcmclient.permission.C2D_MESSAGE" />
+
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
@@ -41,6 +49,15 @@
 
         </activity>
 
+        <receiver
+            android:name=".Service.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.example.gcm" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".Service.GcmIntentService" />
 
 
     </application>
