--- a/TiltCodeManager/app/src/main/AndroidManifest.xml
+++ b/TiltCodeManager/app/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <permission android:name="com.icelancer.androidgcmclient.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
@@ -18,6 +23,13 @@
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/AppTheme">
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAcbBL6S6wrrL58Nu-J1557BplLbtWPRiQ" />
+        <!--TODO 키값 수정하기 -->
 
 
         <activity android:name=".Activity.SignupActivity">
@@ -48,6 +60,7 @@
         <activity android:name=".Activity.SettingsActivity">
 
         </activity>
+        <activity android:name=".Activity.GpsSelectActivity"></activity>
 
         <receiver
             android:name=".Service.GcmBroadcastReceiver"
