--- a/tiltcode/app/src/main/AndroidManifest.xml
+++ b/tiltcode/app/src/main/AndroidManifest.xml
@@ -52,6 +52,9 @@
         <activity android:name=".Activity.ChangePasswdActivity"
              android:label="changePasswdActivity">
         </activity>
+        <activity android:name=".Activity.LockScreenActivity"
+            android:label="lockScreenActivity">
+        </activity>
         
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
@@ -59,10 +62,11 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:label="@string/app_name" />
 
-        <service android:name=".Service.TiltService" ></service>
+        <service android:name=".Service.TiltService" >
+        </service>
         <receiver android:name=".Service.ServiceMonitor$MonitorBR" >
-
         </receiver>
+
     </application>
 
 
