--- a/tiltcode/app/src/main/AndroidManifest.xml
+++ b/tiltcode/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -53,7 +55,7 @@
              android:label="changePasswdActivity">
         </activity>
         <activity android:name=".Activity.LockScreenActivity"
-            android:label="lockScreenActivity">
+            android:label="lockScreenActivity" android:theme="@android:style/Theme.Translucent">
         </activity>
         
         <activity android:name="com.facebook.FacebookActivity"
