--- a/TiltCodeManager/app/build.gradle
+++ b/TiltCodeManager/app/build.gradle
@@ -25,8 +25,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.diogobernardino:williamchart:1.7.0'
 }
