--- a/TiltCodeManager/app/src/main/AndroidManifest.xml
+++ b/TiltCodeManager/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
         <activity android:name=".Activity.LoginActivity">
 
         </activity>
-        <activity android:name=".Activity.SplashActivity">
+        <activity android:name=".Activity.SplashActivity"
+            android:label="TiltCode 관리자">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,7 +60,12 @@
         <activity android:name=".Activity.SettingsActivity">
 
         </activity>
-        <activity android:name=".Activity.GpsSelectActivity"></activity>
+        <activity android:name=".Activity.GpsSelectActivity">
+
+        </activity>
+        <activity android:name=".Activity.ChangePasswdActivity">
+
+        </activity>
 
         <receiver
             android:name=".Service.GcmBroadcastReceiver"
