--- a/tiltcode/app/src/main/AndroidManifest.xml
+++ b/tiltcode/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
 
         <activity android:name=".Activity.SplashActivity"
-            android:label="splashactivity">
+            android:label="TiltCode">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
