--- a/tiltcode/app/src/main/AndroidManifest.xml
+++ b/tiltcode/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
         <activity android:name=".Activity.LockScreenActivity"
             android:label="lockScreenActivity" android:theme="@android:style/Theme.Translucent">
         </activity>
+        <activity android:name=".Activity.PushSettingActivity"
+            android:label="pushSettinActivity">
+        </activity>
         
         <activity android:name="com.facebook.FacebookActivity"
             android:configChanges=
