--- a/tiltcode/app/src/main/AndroidManifest.xml
+++ b/tiltcode/app/src/main/AndroidManifest.xml
@@ -37,9 +37,11 @@
             android:label="mainactivity">
         </activity>
         <activity android:name=".Activity.LoginActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:label="loginactivity">
         </activity>
         <activity android:name=".Activity.SignupActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:label="signupactivity">
         </activity>
         <activity android:name=".Activity.NotificationActivity"
@@ -56,6 +58,9 @@
         </activity>
         <activity android:name=".Activity.LockScreenActivity"
             android:label="lockScreenActivity" android:theme="@android:style/Theme.Translucent">
+        </activity>
+        <activity android:name=".Activity.CouponReceiveActivity"
+            android:label="couponReceiveActivity">
         </activity>
 
         <activity android:name="com.facebook.FacebookActivity"
