--- a/TiltCodeManager/app/src/main/AndroidManifest.xml
+++ b/TiltCodeManager/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+
     <permission android:name="com.icelancer.androidgcmclient.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
     <uses-permission android:name="com.icelancer.androidgcmclient.permission.C2D_MESSAGE" />
@@ -32,18 +33,21 @@
 
 
         <activity android:name=".Activity.SignupActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
 
         </activity>
-        <activity android:name=".Activity.MainActivity">
+        <activity android:name=".Activity.MainActivity"
+            android:screenOrientation="portrait">
 
         </activity>
         <activity android:name=".Activity.LoginActivity"
-
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
 
         </activity>
         <activity android:name=".Activity.SplashActivity"
+            android:screenOrientation="portrait"
             android:label="TiltCode 관리자">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,28 +56,36 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activity.RegisterActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
 
         </activity>
-        <activity android:name=".Activity.CouponListActivity">
+        <activity android:name=".Activity.CouponListActivity"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".Activity.PurchaseActivity">
+        <activity android:name=".Activity.PurchaseActivity"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".Activity.SettingsActivity">
+        <activity android:name=".Activity.SettingsActivity"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".Activity.GpsSelectActivity">
+        <activity android:name=".Activity.GpsSelectActivity"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".Activity.ChangePasswdActivity">
+        <activity android:name=".Activity.ChangePasswdActivity"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".Activity.TiltSelectActivity">
+        <activity android:name=".Activity.TiltSelectActivity"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".Activity.PushSettingActivity">
+        <activity android:name=".Activity.PushSettingActivity"
+            android:screenOrientation="portrait">
 
         </activity>
 
