--- a/tiltcode/app/build.gradle
+++ b/tiltcode/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    //org.apache.commons랑 commons-codec이 겹쳐서 아래 옵션으로 고침
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -26,6 +31,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.1.0'
     compile 'com.alexvasilkov:foldable-layout:1.0.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'org.apache.commons:commons-io:1.3.2'
     compile 'commons-codec:commons-codec:1.5'
     compile 'com.navercorp.pulltorefresh:library:3.2.0@aar'
 
