--- a/tiltcode/app/src/main/AndroidManifest.xml
+++ b/tiltcode/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
 
         <activity android:name=".Activity.SplashActivity"
+            android:screenOrientation="portrait"
             android:label="TiltCode">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,36 +35,46 @@
         </activity>
 
         <activity android:name=".Activity.MainActivity"
+            android:screenOrientation="portrait"
             android:label="mainactivity">
         </activity>
         <activity android:name=".Activity.LoginActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             android:label="loginactivity">
         </activity>
         <activity android:name=".Activity.SignupActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize"
             android:label="signupactivity">
         </activity>
         <activity android:name=".Activity.NotificationActivity"
+            android:screenOrientation="portrait"
             android:label="notificationActivity">
         </activity>
         <activity android:name=".Activity.SettingAccountActivity"
+            android:screenOrientation="portrait"
             android:label="settingAccountActivity">
         </activity>
         <activity android:name=".Activity.ChangeNameActivity"
+            android:screenOrientation="portrait"
             android:label=".changeNameActivity">
         </activity>
         <activity android:name=".Activity.ChangePasswdActivity"
+            android:screenOrientation="portrait"
              android:label="changePasswdActivity">
         </activity>
         <activity android:name=".Activity.LockScreenActivity"
+            android:screenOrientation="portrait"
             android:label="lockScreenActivity" android:theme="@android:style/Theme.Translucent">
         </activity>
         <activity android:name=".Activity.CouponReceiveActivity"
+            android:screenOrientation="portrait"
             android:label="couponReceiveActivity">
         </activity>
 
         <activity android:name="com.facebook.FacebookActivity"
+            android:screenOrientation="portrait"
             android:configChanges=
                 "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
