--- a/tiltcode/app/build.gradle
+++ b/tiltcode/app/build.gradle
@@ -27,7 +27,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.facebook.android:facebook-android-sdk:4.1.0'
     compile 'com.alexvasilkov:foldable-layout:1.0.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
