--- a/TiltCodeManager/app/build.gradle
+++ b/TiltCodeManager/app/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.alexvasilkov:foldable-layout:1.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.google.android.gms:play-services:6.5.87'
