--- a/TiltCodeManager/app/src/main/AndroidManifest.xml
+++ b/TiltCodeManager/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <application android:allowBackup="true"
         android:label="@string/app_name"
         android:name=".TiltCodeApplication"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic"
         android:theme="@style/AppTheme">
 
         <meta-data
