--- a/TiltCodeManager/app/build.gradle
+++ b/TiltCodeManager/app/build.gradle
@@ -23,14 +23,18 @@ android {
         }
     }
 }
+repositories {
+    maven { url "https://jitpack.io" }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.alexvasilkov:foldable-layout:1.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.0'
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.nononsenseapps:filepicker:2.1'
-    compile 'com.diogobernardino:williamchart:1.7.0'
+
 }
