--- a/tiltcode/app/src/main/AndroidManifest.xml
+++ b/tiltcode/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:name=".TiltCodeApplication"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic"
+        android:largeHeap="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
