coupon edit file update

--- a/tiltcode/app/src/main/AndroidManifest.xml
+++ b/tiltcode/app/src/main/AndroidManifest.xml
@@ -90,6 +90,11 @@
         </service>
         <receiver android:name=".Service.ServiceMonitor$MonitorBR" >
         </receiver>
+        <receiver android:name=".Service.RestartService">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
