--- a/TiltCodeManager/app/src/main/AndroidManifest.xml
+++ b/TiltCodeManager/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
 
     <application android:allowBackup="true"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:name=".TiltCodeApplication"
         android:icon="@drawable/ic"
         android:theme="@style/AppTheme">
